# scenecast

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/scenecast-cli/: Cargo.toml
crates/scenecast-cli/src/: main.rs
crates/scenecast-cli/tests/: cli.rs
crates/scenecast-core/: Cargo.toml
crates/scenecast-core/src/: lib.rs
crates/scenecast-core/tests/: manifest_roundtrip.rs
crates/scenecast-core/tests/fixtures/interactive.scenecast/: manifest.json
docs/: architecture.md  bundle-format.md  cli.md  roadmap.md
examples/playwright-scroll-capture/: README.md  capture.mjs  package.json  sample-page.html
examples/scroll.scenecast/: manifest.json
