[workspace]
members = [
    "crates/scenecast-cli",
    "crates/scenecast-core",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/sethjuarez/scenecast"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
assert_cmd = "2.1.1"
clap = "4.5.53"
predicates = "3.1.3"
scenecast-core = { path = "crates/scenecast-core" }
serde = "1.0.228"
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
